DTSPB-4434 Modified Primary applicant details to appear only for Citizens